When navigation focuses a web contents, also activate its window.

This fixes an issue where a popup opened by clicking a notification doesn't
activate Chrome (and appears behind the active app) on Mac.

BUG=661250

Review-Url: https://codereview.chromium.org/2729613006
Cr-Commit-Position: refs/heads/master@{#455632}

Former-commit-id: 6589abd5285d3008c44143269bdf5dc2605028cf